// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component passes complex props through to FormControl and MaskedInput 1`] = `
<div>
  <input
    bsclass="my-form-control"
    bssize="large"
    class="form-control form-control-10"
    id="my-id"
    mask="111-111-1111"
    maxlength="12"
    placeholder="555-555-5555"
    size="12"
    value=""
  />
</div>
`;

exports[`Component renders correctly with basic props 1`] = `
<div>
  <input
    class="form-control"
    mask="111-111-1111"
    maxlength="12"
    placeholder="___-___-____"
    size="12"
    value=""
  />
</div>
`;
